# file-table

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  LICENSE.txt  README.md  compose.yaml  docker-compose.yml  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: dioxus.yml  docker.yml  rust.yml
blaze/: docker-compose.yml
blaze/blaze-loader/: encounter_department.json  encounter_facility.json  load.sh  patient_full.json  patient_pseudonymized.json
demo/: compose.yaml  docker-compose.yml
demo/blaze-loader/: condition_example_1.json  condition_example_2.json  load.sh  observation.json  patient_minimal.json  procedure.json
src/: fhir.rs  main.rs  server.rs  serverfn.rs  table.rs
