[package]
name = "scout"
version = "0.1.0"
authors = ["Tim Schumacher <tim.schumacher@dkfz-heidelberg.de>"]
edition = "2024"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
itertools = "0.14.0"
jiff = { version = "0.2.13", features = ["js", "serde"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
tracing = "0.1.41"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
